remove SpecialItemList.java small refactor add shulkers as list